/*
 *        (C) COPYRIGHT Daniel Wang Limited.
 *             ALL RIGHTS RESERVED
 *
 * File       : structure/processors/register.h
 * Authors    : wangliquan@cc-SYS-7048GR-TR
 * Create Time: 2023-08-02:13:40:46
 * Description:
 *
 */

#ifndef __STRUCTURE_PROCESSORS_REGISTER_H__
#define __STRUCTURE_PROCESSORS_REGISTER_H__

namespace mariana {

void register_processors();

void unregister_processors();

} // namespace mariana


#endif /* __STRUCTURE_PROCESSORS_REGISTER_H__ */

